added links to webmocha

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <title>Prefetch</title>
 
+    <style>
+      sup { position:relative; top:-0.5em; font-size:0.75em;}
+    </style>
     <script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.prefetch.js"></script>
   </head>
@@ -54,8 +57,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Prefetch maintained by <a href="https://github.com/jayhung">jayhung</a> and <a href="https://github.com/webmocha">webmocha</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">Prefetch maintained by <a href="https://github.com/jayhung">jayhung</a> and <a href="https://github.com/webmocha">webmocha</a>, and published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>For <a href="http://webmocha.com">fresh brewed frontend</a><sup>sm that loads fast, visit us at <a href="http://webmocha.com">webmocha.com</a></p>
       </footer>
     </div>
 
