added missing </sup>

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Prefetch maintained by <a href="https://github.com/jayhung">jayhung</a> and <a href="https://github.com/webmocha">webmocha</a>, and published with <a href="http://pages.github.com">GitHub Pages</a></p>
-        <p>For <a href="http://webmocha.com">fresh brewed frontend</a><sup>sm that loads fast, visit us at <a href="http://webmocha.com">webmocha.com</a></p>
+        <p>For <a href="http://webmocha.com">fresh brewed frontend</a><sup>sm</sup> that loads fast, visit us at <a href="http://webmocha.com">webmocha.com</a></p>
       </footer>
     </div>
 
