--- a/prefetch-demo.html
+++ b/prefetch-demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Prefetch Demo</title>
-	<script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="jquery.prefetch.js"></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
 </ol>
 
 <script>
-	$(window).prefetch('http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/jquery-ui.min.js');
+	$(window).prefetch('http://wm.wcdn.in/ext/prezos/custom-events-and-prefetch/jquery-ui.min.js');
 	$(window).prefetch('http://wm.wcdn.in/img/ui/webmocha_logo.png', 4000);
 </script>
 
