updated to load jquery-ui.min.js from a cdn w/ long expires

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
       sup { position:relative; top:-0.5em; font-size:0.75em;}
     </style>
-    <script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.prefetch.js"></script>
   </head>
 
@@ -47,7 +47,7 @@
         </ol>
 
         <script>
-          $(window).prefetch('http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/jquery-ui.min.js');
+          $(window).prefetch('http://wm.wcdn.in/ext/prezos/custom-events-and-prefetch/jquery-ui.min.js');
           $(window).prefetch('http://wm.wcdn.in/img/ui/webmocha_logo.png', 4000);
         </script>
 
